6/dynamic-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-pod-example 
spec:
  containers:
    - image: nginx
      name: nginx 
      volumeMounts:
      - mountPath: /tmp/data 
        name: gcp-dynamic-pv
  volumes:
    - name: gcp-dynamic-pv
      persistentVolumeClaim:
        claimName: claim1
