6/emptydir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ["/bin/sh", "-c", "cat /cache/initial-date && sleep 3600"]
    volumeMounts:
    - mountPath: /cache # mountPath can differ between containers
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
