6/sock-shop-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sock-shop-ingress
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - sock-shop.hwsw.leannet.hu
    secretName: sock-shop-tls
  rules:
  - host: sock-shop.hwsw.leannet.hu
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
